--- a/app/globals.css
+++ b/app/globals.css
@@ -16,15 +16,9 @@
   }
 } */
 
-/* body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
+body {
+  background: white
+}
 
 /* @layer utilities {
   .text-balance {
